# GAC-Mapping

./: .clang-format  .clang-tidy  .gitignore
.devcontainer/: GAC-Mapping.Containerfile  compose.yaml  devcontainer.json  ros2-bagplay.Containerfile
Patch-NetVLAD/: pyproject.toml
gacm/: .clang-format  CMakeLists.txt
gacm/config/: graco_uav.yaml  graco_uav_orb.yaml  graco_ugv.yaml
gacm/include/: featureDefinition.h  featureExtractor.h  lidarFactor.h  parameters.h  poseEstimator.h  scanRegistrator.h
gacm/include/depth_completion/: depth_interpolation.h  ip_basic_dc.h
gacm/include/depth_completion/eval/: log_colormap.h  utils.h
gacm/include/ga_posegraph/: poseFactor.h
gacm/include/ga_velodyne/: common.h
gacm/include/gacm/: featureDefinition.h  featureExtractor.h  parameters.h  poseEstimator.h  scanRegistrator.h
gacm/include/gacm/depth_completion/: guided_filter.h  joint_bilateral_filter.h
gacm/include/gacm/depth_completion/eval/: depth_util.h  evaluation.h  io_depth.h
gacm/include/gacm/ga_posegraph/: poseGraphStructure.h
gacm/include/gacm/ga_velodyne/: common.h
gacm/include/gacm/loop_closure/: loop_score.hpp
gacm/include/gacm/mapping/: sub_map.h
gacm/include/gacm/skimap/: SkiMapInterface.h  cloud.h  loamskimap.h  map_viewer.h  transform.h
gacm/include/gacm/uninode/: feature_tracking.hpp  file_enumeration.hpp  odometry.hpp  submap_management.hpp
gacm/include/gacm/util/: godec.h  ip_basic.h  iputil.h  jbf_filter.h
gacm/include/mapping/: sub_map.h
gacm/include/skimap/: SkiGridMapInterface.h  SkiMapInterface.h  lidar_slam_utils.h  logger.h  st_lidar_slam_utils.h
gacm/include/util/: ip_basic.h  iputil.h  log_colormap.h
gacm/launch/: graco.launch  graco_uninode.launch
gacm/src/: featureExtractor.cpp  featureTrackingNode.cpp  parameters.cpp  plOdometryNode.cpp  poseEstimator.cpp  scanRegistrator.cpp  submapManagerNode.cpp
gacm/src/mapping/: sub_map.cpp
gacm/src/uninode/: feature_tracking.cpp  file_enumeration.cpp  main.cpp  odometry.cpp  submap_management.cpp
gacm/src/util/: ip_basic.cpp  iputil.cpp
